# image_color_percentage

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: main.cpp
